correcao de tranco do front-end e nnome do arquivo foto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <article class="text">
                     <h2>🧙‍♂️ Sobre mim</h2>
                     <p>Olá, me chamo Fabrício Freitas (ou Zatann 😆), tenho 23 anos e sou de Salvador-BA, Brasil.
-                    Estudo programacao por conta propria com enfase em front end, pretendo conseguir uma vaga junior futuramente com um portifolio pequeno e em seguida ingressar a faculdade de engenharia de software
+                    Estudo programacao por conta propria com enfase em front-end, pretendo conseguir uma vaga junior futuramente com um portifolio pequeno e em seguida ingressar a faculdade de engenharia de software
                     </p>
                 </article>
 
